@@ -4,7 +4,7 @@
 // phpQLAdmin Application Programming Interface (API)
 // (special functions for bind9 control - DNS zone in LDAP)
 //
-// $Id: pql_bind9.inc,v 2.39 2006-07-08 10:29:36 turbo Exp $
+// $Id: pql_bind9.inc,v 2.40 2006-07-26 20:22:39 turbo Exp $
 //
 
 // {{{ pql_bind9_get_zone(linkid, branchname, domainname)
@@ -158,7 +158,8 @@ function pql_bind9_get_zone($linkid, $branchname, $domainname = '') {
 function pql_bind9_get_acis($linkid, $zone) {
   $filter = '(&('.pql_get_define("PQL_ATTR_ZONENAME")."=$zone)(".pql_get_define("PQL_ATTR_RELATIVEDOMAINNAME").'=@))';
   foreach($_SESSION["BASE_DN"] as $base) {
-	$object = pql_search($linkid, $base, $filter, 'SUBTREE', 1, 1);
+	// OpenLDAP uses 'OpenLDAPaci', but everyone else uses 'aci'...
+	$object = pql_search($linkid, $base, $filter, 'SUBTREE', 1, array('OpenLDAPaci', 'aci'););
 	if(@is_array($object[0]))
 	  return $object[0][pql_get_define("PQL_ATTR_LDAPACI")];
   }
